--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -603,7 +603,7 @@ LeadListScreen As screen:
             HoverFill: =RGBA(75, 125, 6, 1)
             OnSelect: |-
                 =Set(QQname,true);
-                UpdateIf(LeadInformations,ID=glryleadlistLS.Selected.ID,{LeadStatus:"InProgress",QQTeamName:User().FullName,LeadDate:Now()});
+                UpdateIf(LeadInformations,ID=glryleadlistLS.Selected.ID,{LeadStatus:"InProgress",QQTeamName:User().FullName,StatusDate:Now()});
                 LeadInProgress.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,User().FullName);
                 Navigate(LeadScreen);
             PressedBorderColor: =RGBA(1, 43, 1, 0)
