--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1476,7 +1476,7 @@ LeadScreen As screen:
             FontWeight: =FontWeight.Bold
             Height: =Parent.Height
             Size: =26
-            Text: =If(VarMyLeads=true,"My Leads",VarOpenLeads=true,"Open Leads",VarQuotedLeads=true,"Quoted Leads",VarSoldLeads=true,"Sold Leads")
+            Text: =If(VarMyLeads=true,"My Lead Detail Information",VarOpenLeads=true,"Open Lead Detail Information",VarQuotedLeads=true,"Quoted Lead Detail Information",VarSoldLeads=true,"Sold Lead Detail Innformation")
             Width: =ctnHeaderLeadScreen.Width/1.5
             X: =imgSchindlerlogoLdS.Width+imgSchindlerlogoLdS.X
             ZIndex: =3
