--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1251,7 +1251,7 @@ LeadScreen As screen:
                     HoverBorderColor: =//RGBA(0, 18, 107, 1)
                     HoverFill: =//RGBA(186, 202, 226, 1)
                     MaxLength: =11
-                    OnChange: =Notify("Estimate number should not be greater than 11 digit.")
+                    OnChange: =If(Len(txtinptestimatenumber_1)=11, Notify("Estimate number should not be greater than 11 digit."))
                     PaddingLeft: =20
                     X: =20
                     Y: =lblestimatenumberleaddetailsLdS_1.Height+lblestimatenumberleaddetailsLdS_1.Y //Label14_10.Height+Label14_10.Y
