--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1351,7 +1351,7 @@ LeadScreen As screen:
                                     ) + 1
                                 }
                             );
-                            LeadQuoted.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,User().FullName);
+                            LeadQuoted.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,VarLoggedInUser.FullName);
                             Notify(
                                 "Proposed Incentives updated for the estimateId " & txtinptestimatenumber_1.Text,
                                 NotificationType.Success
@@ -1426,7 +1426,7 @@ LeadScreen As screen:
                                     StatusDate:Now()
                                 }
                             );
-                            LeadRejected.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,User().FullName);
+                            LeadRejected.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,VarLoggedInUser.FullName);
                             Notify("Lead rejected with comment successfully.");
                         )
                     Text: ="Submit back to technician"
